@@ -110,6 +110,8 @@ protected:
 	void hideEvent(QHideEvent *);
 	void closeEvent(QCloseEvent *);
 
+	void keyPressEvent(QKeyEvent *);
+
 private:
 
 	// The Qt-designer UI struct...
